# verilog-stuff

./: .gitignore  README.md  shell.nix  test.sh
.github/workflows/: ci.yml
01-wiredemo/: CMakeLists.txt  wiredemo.cpp  wiredemo.sv
02-blinky/: CMakeLists.txt  blinky.cpp  blinky.sv  counter.sv  input.vc
03-walker/: CMakeLists.txt  counter.sv  walker.cpp  walker.sby  walker.sv
04-pipeline/: CMakeLists.txt  counter.sv  pipeline.cpp  pipeline.sby  pipeline.sv
05-serialtx/: CMakeLists.txt  input.vc  serialtx.cpp  serialtx.sby  serialtx.sv  state.txt
lfsr/: CMakeLists.txt  lfsr.cpp  lfsr.sby  lfsr.sv
